<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                      xmlns:app="http://schemas.android.com/apk/res-auto"
                                                      xmlns:tools="http://schemas.android.com/tools"
                                                      android:layout_width="match_parent"
                                                      android:layout_height="match_parent"
                                                      android:padding="@dimen/padding"
                                                      app:layoutDescription="@xml/motion_scene"
                                                      app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                      tools:context=".DetailActivity"
                                                      tools:showIn="@layout/activity_detail">

    <TextView
            android:id="@+id/fileNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_text"
            android:text="@string/file_name"/>

    <TextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_text"
            android:singleLine="false"
            android:textColor="@color/colorPrimaryDark"/>

    <TextView
            android:id="@+id/fileStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_text"
            android:text="@string/status"/>

    <TextView
            android:id="@+id/fileStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_text"
            android:textColor="@color/colorPrimaryDark"/>

    <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/ok_button"
            android:textColor="@color/white"/>

</androidx.constraintlayout.motion.widget.MotionLayout>