<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_cloud_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/raddioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
                android:id="@+id/optionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_one"/>

        <RadioButton
                android:id="@+id/optionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_two"/>

        <RadioButton
                android:id="@+id/optionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_three"/>

    </RadioGroup>
    <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:loading_button_background="@color/colorPrimary"
            app:loading_button_text_color="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/raddioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>